bilibili_card fix text-align

--- a/bilibili/bilibilicard.css
+++ b/bilibili/bilibilicard.css
@@ -10,6 +10,7 @@
 	border-radius: 5px;
 	border-color: #eee #ddd #bbb;
 	box-shadow: rgba(0,0,0,.14) 0 1px 3px;
+	text-align: left;
 	margin:auto;
 }
 .bilibili-card a {
